# Industrial-Robotics-Assignment-2

./: .gitignore  OctoprintMonitor.py  README.md  Swift-Matlab.asv  SwiftMATLAB.py  SwiftMatlab.m  env.m  mainControl.m  printer1-Joint instructions.txt  printer2-Joint instructions.txt  printer3-Joint instructions.txt  printerState.m  updatePrinterStatus.m  ur3eLink0.PLY
@TM5/: TM5Link4.ply  TM5Link5.ply
End Effector Package/: ArucoTagCanvas.SLDPRT  ArucoTagCanvas.STL  Camera Cover.SLDPRT  CameraCoverPrint.STL  End Effector Assembly.SLDASM  End Effector Base.SLDPRT  End Effector BaseA1.SLDPRT  End Effector BaseA2.SLDPRT  End Effector Prong.SLDPRT  EndEffectPrint.STL  PrintBedClip.SLDPRT  PrintBedClip.STL  gazeboTest.SLDASM  gazeboTest.SLDPRT  moddedprintbed.SLDASM  moddedprintbed.SLDPRT
End Effector Package/Ender3CADFile/: 2020 Endcap.SLDPRT  2020 profile.SLDPRT  2020-2 profile.SLDPRT  2040-2 profile.SLDPRT  2040-3L profile.SLDPRT  2040-3R profile.SLDPRT  24V15A power supply.SLDPRT  2GT-pulley.SLDPRT  4040 profile.SLDPRT  4040-3 profile.SLDPRT  42-34 motor.SLDPRT  624U pillow.SLDPRT  625pillow.SLDPRT  ASM Bed.SLDASM  ASM Display.SLDASM  ASM Eccentrical Roller X-Axis.SLDASM  ASM Eccentrical Roller Y-Axis.SLDASM  ASM Eccentrical Roller Z-Axis Left.SLDASM  ASM Eccentrical Roller Z-Axis Right.SLDASM  ASM Electronic Enclosure.SLDASM  ASM Extruder.SLDASM  ASM Frame.SLDASM  ASM Heating Unit.SLDASM  ASM Power Supply.SLDASM  ASM Printing Head.SLDASM  ASM Roller Bolt.SLDASM  ASM Roller X-Axis.SLDASM  ASM Roller Y-Axis.SLDASM  ASM Roller Z-Axis Left.SLDASM  ASM Roller Z-Axis Right.SLDASM  ASM Spool Holder.SLDASM  ASM X-Axis.SLDASM  ASM X-Belt Tensioner.SLDASM  ASM Y-Axis Limit Switch.SLDASM  ASM Y-Axis.SLDASM  ASM Y-Belt Tensioner.SLDASM  ASM Z-Axis Limit Switch.SLDASM  ASM Z-Axis.SLDASM  Bed level springs.SLDPRT  Case fan.SLDPRT  (+82 more)
Industrial _Robotics/: SwiftMatlab.m  mainControl.m  processPart.m
Industrial _Robotics/ML_Env_1/: Print.m  SetUp.m  printerSpawn.m
Industrial _Robotics/ML_Env_1/ply/: BinR.ply
Industrial _Robotics/testSandbox/: testCodeUR3e.m  test_env_tm5.m
Industrial _Robotics/ur3e/: ur3e_modified.m
Industrial_Robotics/: RobotBaseClass_modified.m  logger.m  robotController.m
Industrial_Robotics/LinearTM5/: LinearTM5.m
Industrial_Robotics/ML_Env_1/: FireE.m  ManualControl.mlapp  SetUp.asv  SetUp.m  StopB.m  printerSpawn.m  projectGUI.mlapp  traj.asv  traj.m
Industrial_Robotics/ML_Env_1/Moving Objects/: printBed.m
Industrial_Robotics/ML_Env_1/ply/: BinL.ply  fenceFinals.ply
Industrial_Robotics/MainProgram/: Print.m  SetUp.asv  SetUp.m  curtainTest.m  mainController.m  projectGUI.mlapp  projectGUI_exported.m  robotController.m  traj.m
Industrial_Robotics/MainProgram/LinearTM5/: LinearTM5.m
Industrial_Robotics/MainProgram/Moving Objects/: E3Bed.ply  humanMale.m  printBed.m
Industrial_Robotics/MainProgram/ply/: PrintBedFixed.ply  WBench.PLY  WpersonMaleConstruction.ply
Industrial_Robotics/MainProgram/ur3e/: ur3e_modified.m
Industrial_Robotics/PY_Env_1/: Garage.dae
Industrial_Robotics/testSandbox/: CollisionTest.asv  CollisionTest.m  testCodeUR3e.m  test_env_ur3e.m
Industrial_Robotics/ur3e/: UR3noShell.m  ur3e_modified.m
Industrial_Robotics/ur3e/2F85/: g_2F85Link0.ply  (+5 more)
ML_Env_1/: Bench_Omran.m  Bench_Print.asv  Bench_Print.m  Bench_UR3E.m  BinL.m  BinR.m  Garage.m  LinearUR3.m  LinkTest.m  Printer.m  SetUp.m  test.m
ML_Env_1/ply/: Bed Mover.PLY  Bed.PLY  Bench.PLY  BinL.ply  BinR.ply  ClipL.PLY  ClipR.PLY  Garage.PLY  PrintBed.PLY  WBench.PLY
Sensors_n_Control/: arucoPoseEstimation2.py  attachTool.py  requirements.txt
Sensors_n_Control/gazeboConfig/: TestSetup.world  TestWorld2.world
Sensors_n_Control/tm5_custom/: CMakeLists.txt  package.xml
Sensors_n_Control/tm5_custom/description/meshes/visual/: endEffectorFixed.stl
Sensors_n_Control/tm5_custom/description/urdf/: tm5-700.urdf.xacro  user_defined_tm5-700.urdf.xacro
Sensors_n_Control/tm5_custom/gazeboModels/printbed1/: model.config
Sensors_n_Control/tm5_custom/gazeboModels/printer/: model.sdf
Sensors_n_Control/tm5_custom/gazeboModels/printerTable/: model.config
Sensors_n_Control/tm5_custom/gazeboModels/printerTable/meshes/: printerTable.dae
Sensors_n_Control/tm5_custom/launch/: usb_cam.launch
Sensors_n_Control/tm5_custom/launch/gazebo/: tm5-700_gazebo.launch
Sensors_n_Control/tm5_custom/launch/rviz/: major_project.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  tm5-700-moveit_bringup.launch  tm5-700_moveit_controller_manager.launch.xml  tm5-700_moveit_planning_execution.launch  tm5-700_moveit_planning_execution_gazebo.launch  tm_common.launch
Sensors_n_Control/tm5_custom/scripts/: arucoPoseEstimation2.py  attachTool.py
Sensors_n_Control/tm5_custom/worlds/: TestWorld2.world
Sensors_n_Control_Only/: arucoPoseEstimation2.py  attachTool.py  endeffectorManual.py  offset.txt
Sensors_n_Control_Only/gazeboConfig/: ArTagTestSetup.world  TestWorld1.world
Sensors_n_Control_Only/tm5_custom/: CMakeLists.txt  package.xml
Sensors_n_Control_Only/tm5_custom/description/urdf/: tm.gazebo.xacro  user_defined_tm5-700.urdf.xacro
Sensors_n_Control_Only/tm5_custom/gazeboModels/printbed0/: model.config  model.sdf
Sensors_n_Control_Only/tm5_custom/gazeboModels/printbed1/: model.sdf
Sensors_n_Control_Only/tm5_custom/gazeboModels/printbed1/meshes/: moddedprintbed.dae
Sensors_n_Control_Only/tm5_custom/gazeboModels/printerTable/: model.sdf
Sensors_n_Control_Only/tm5_custom/include/tm_driver/: tm_ros_node.h
Sensors_n_Control_Only/tm5_custom/launch/rviz/: move_group.launch  trajectory_execution.launch.xml
Sensors_n_Control_Only/tm5_custom/src/: tm_ros_node.cpp  tm_ros_service.cpp
TM5/: TM5Link0.ply  TM5Link6.ply
UR3/: UR3.py
UR3EnewPLYs/: ur3eLink1.PLY
testSandbox/: testCodeTM5.m  test_env_tm5.m  test_env_ur3e.m
tm5/: TM5.m  TM5Link0.ply  TM5Link1.ply  TM5Link2.ply  TM5Link3.ply  TM5Link4.ply  TM5Link5.ply  TM5Link6.ply  TM5Link7.ply  tm5.m
ur3e/: ur3e.m  ur3e_modified.m
(+13 files in other folders)
