<?xml version="1.0"?>
<package format="2">
  <name>tm5_custom</name>
  <version>1.0.0</version>
  <description>
      ROS package for TM5-700 robot only (modified from tmr noetic repo by Zahead Rashidi)
  </description>

  <author email="yh.wang@tm-robot.com">yh.wang</author>
  <maintainer email="yh.wang@tm-robot.com">yh.wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tm_msgs</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tm_msgs</exec_depend>

  <export>
  </export>
</package>
 
